--- a/main.html
+++ b/main.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <script src="script.js " defer></script>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-    <title>Better Instagram</title>
-  </head>
-  <body>
-    <h1 style="text-align: center">Arrange Images by drag and drop</h1>
-    <div class="flex" id="parent">
-      <div draggable="true" class="image" id="div1">Image 1</div>
-      <div draggable="true" class="image" id="div2">Image 2</div>
-      <div draggable="true" class="image" id="div3">Image 3</div>
-      <div draggable="true" class="image" id="div4">Image 4</div>
-      <div draggable="true" class="image" id="div5">Image 5</div>
-      <div draggable="true" class="image" id="div6">Image 6</div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Better Instagram</title>
+  <link rel="stylesheet" href="styles.css" />
+  <script src="script.js" defer></script>
+</head>
+<body>
+  <h1 style="text-align: center">Arrange Images by Drag and Drop</h1>
+
+  <div class="flex" id="parent">
+    <div draggable="true" class="image" id="drag1">
+      <img src="https://picsum.photos/id/237/200/300" />
     </div>
-  </body>
+    <div draggable="true" class="image" id="drag2">
+      <img src="https://picsum.photos/seed/picsum/200/300" />
+    </div>
+    <div draggable="true" class="image" id="drag3">
+      <img src="https://picsum.photos/200/300?grayscale" />
+    </div>
+    <div draggable="true" class="image" id="drag4">
+      <img src="https://picsum.photos/200/300/" />
+    </div>
+    <div draggable="true" class="image" id="drag5">
+      <img src="https://picsum.photos/200/300.jpg" />
+    </div>
+    <div draggable="true" class="image" id="drag6">
+      <img src="https://picsum.photos/id/102/200/300" />
+    </div>
+  </div>
+</body>
 </html>
