--- a/main.html
+++ b/main.html
@@ -9,14 +9,14 @@
     <title>Better Instagram</title>
   </head>
   <body>
-	  <h1 style="text-align: center">Arrange Images by drag and drop</h1>
-	   <div class="flex" id="parent">
-        <div draggable="true" class="image" id="drag1">Image 1</div>
-        <div draggable="true" class="image" id="drag2">Image 2</div>
-        <div draggable="true" class="image" id="drag3">Image 3</div>
-        <div draggable="true" class="image" id="drag4">Image 4</div>
-        <div draggable="true" class="image" id="drag5">Image 5</div>
-        <div draggable="true" class="image" id="drag6">Image 6</div>
-       </div>
+	<div class="flex" id="parent">
+  <div draggable="true" class="image" id="div1"><img src="https://picsum.photos/id/237/200/300" /></div>
+  <div draggable="true" class="image" id="div2"><img src="https://picsum.photos/seed/picsum/200/300" /></div>
+  <div draggable="true" class="image" id="div3"><img src="https://picsum.photos/200/300?grayscale" /></div>
+  <div draggable="true" class="image" id="div4"><img src="https://picsum.photos/200/300/" /></div>
+  <div draggable="true" class="image" id="div5"><img src="https://picsum.photos/200/300.jpg" /></div>
+  <div draggable="true" class="image" id="div6"><img src="https://picsum.photos/id/102/200/300" /></div>
+</div>
+
   </body>
 </html>
