--- a/main.html
+++ b/main.html
@@ -9,14 +9,14 @@
     <title>Better Instagram</title>
   </head>
   <body>
-	<div class="flex" id="parent">
-  <div draggable="true" class="image" id="div1"><img src="https://picsum.photos/id/237/200/300" /></div>
-  <div draggable="true" class="image" id="div2"><img src="https://picsum.photos/seed/picsum/200/300" /></div>
-  <div draggable="true" class="image" id="div3"><img src="https://picsum.photos/200/300?grayscale" /></div>
-  <div draggable="true" class="image" id="div4"><img src="https://picsum.photos/200/300/" /></div>
-  <div draggable="true" class="image" id="div5"><img src="https://picsum.photos/200/300.jpg" /></div>
-  <div draggable="true" class="image" id="div6"><img src="https://picsum.photos/id/102/200/300" /></div>
-</div>
-
+    <h1 style="text-align: center">Arrange Images by drag and drop</h1>
+    <div class="flex" id="parent">
+      <div draggable="true" id="div1" class="image"><img id="drag1"></div>
+      <div draggable="true" id="div2" class="image"><img id="drag2"></div>
+      <div draggable="true" id="div3" class="image"><img id="drag3"></div>
+      <div draggable="true" id="div4" class="image"><img id="drag4"></div>
+      <div draggable="true" id="div5" class="image"><img id="drag5"></div>
+      <div draggable="true" id="div6" class="image"><img id="drag6"></div>
+    </div>
   </body>
 </html>
