--- a/main.html
+++ b/main.html
@@ -11,12 +11,12 @@
   <body>
     <h1 style="text-align: center">Arrange Images by drag and drop</h1>
     <div class="flex" id="parent">
-      <div draggable="true" id="div1" class="image"><img id="drag1"></div>
-      <div draggable="true" id="div2" class="image"><img id="drag2"></div>
-      <div draggable="true" id="div3" class="image"><img id="drag3"></div>
-      <div draggable="true" id="div4" class="image"><img id="drag4"></div>
-      <div draggable="true" id="div5" class="image"><img id="drag5"></div>
-      <div draggable="true" id="div6" class="image"><img id="drag6"></div>
+	      <div draggable="true" class="image" id="div1" ><div id = "drag1"><img src="https://picsum.photos/id/237/200/300"><p>Image 1</p></div></div>
+	      <div draggable="true" class="image" id="div2" ><div id = "drag2"><img src="https://picsum.photos/seed/picsum/200/300"><p>Image 2</p></div></div>
+	      <div draggable="true" class="image" id="div3" ><div id = "drag3"><img src="https://picsum.photos/200/300?grayscale"><p>Image 3</p></div></div>
+	      <div draggable="true" class="image" id="div4" ><div id = "drag4"><img src="https://picsum.photos/200/300/"><p>Image 4</p></div></div>
+	      <div draggable="true" class="image" id="div5" ><div id = "drag5"><img src="https://picsum.photos/200/300.jpg"><p>Image 5</p></div></div>
+	      <div draggable="true" class="image" id="div6" ><div id = "drag6"><img src="https://picsum.photos/id/102/200/300"><p>Image 6</p></div></div>
     </div>
   </body>
 </html>
